# project-8-goit

./: 1_data_analysis.ipynb  3_Model training SVM v3.1.ipynb  3_NNmodel.ipynb  3_Training_Random_Forest.ipynb  3_neural_model_churn.ipynb  Dockerfile  NNmodel.ipynb  README.md  X_test_processed.csv  docker-compose.yml  neural_model_churn.ipynb  project_GOIT_(3).ipynb  standard_scaler.pkl  streamlit.py  y_test.csv  y_train.csv
interface/: app.py  churn_NNmodel.keras  churn_svm_model.pkl  feature_namesNN.json  nn_metrics.json  pyproject.toml  requirements.txt  rf_medians.json  rf_metrics.json  scalerNN.pkl  svm_medians.json  svm_metrics.json  test_data.csv
